fix(ci): trivy-action版本修正@v0.35.0 + Maestro Java兼容性修复 + 34页面UI审计通过